--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+google-site-verification: google6a999af45d9e3cae.html
 <!DOCTYPE html>
 <html lang="en">
 
@@ -5,11 +6,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <meta name="google-site-verification" content="11njGpWKyFs3t3zwySGW5nld8qvOY1BMu-7Hcd8X7DM" />
     <title>DAILYNEWS - Breaking News & Latest Stories</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700;900&family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/style.css">
+    google-site-verification: google6a999af45d9e3cae.html
+    <meta name="google-site-verification" content="11njGpWKyFs3t3zwySGW5nld8qvOY1BMu-7Hcd8X7DM" />
 </head>
 
 <body>
