--- a/public/app.html
+++ b/public/app.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="AFMGedjZF5SYH7keB9CQ3xm0aVP4cU6mljkExb2r00c" />
-    <title>DAILYNEWS - Breaking News & Latest Stories</title>
+    <title>DAILYNEWS v1.1.1 - Breaking News & Latest Stories</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -34,7 +34,29 @@
 
 </head>
 
-<body>
+<body class="loading-state">
+    <script>
+        // Nuclear Cache Clear for v1.1.0
+        (function () {
+            const CURRENT_VERSION = 'v1.1.1';
+            const savedVersion = localStorage.getItem('app_version');
+            if (savedVersion !== CURRENT_VERSION) {
+                console.warn('🔄 New version ' + CURRENT_VERSION + ' detected. Clearing caches and Service Workers...');
+                if ('serviceWorker' in navigator) {
+                    navigator.serviceWorker.getRegistrations().then(function (registrations) {
+                        for (let registration of registrations) { registration.unregister(); }
+                    });
+                }
+                if ('caches' in window) {
+                    caches.keys().then(function (names) {
+                        for (let name of names) caches.delete(name);
+                    });
+                }
+                localStorage.setItem('app_version', CURRENT_VERSION);
+                setTimeout(() => location.reload(true), 800);
+            }
+        })();
+    </script>
     <!-- Top Header -->
     <!-- Main Header Wrapper -->
     <header class="site-header">
@@ -42,7 +64,7 @@
         <div class="top-bar">
             <div class="container top-bar-inner">
                 <div class="top-bar-left">
-                    <span class="current-date" id="current-date">Sunday, January 12, 2026</span>
+                    <span class="current-date" id="current-date"></span>
                     <a href="#" class="top-link">Trending</a>
                 </div>
                 <div class="top-bar-right">
@@ -117,6 +139,18 @@
     <!-- Footer -->
     <footer class="main-footer">
         <div class="footer-container">
+            <!-- Newsletter Section -->
+            <div class="footer-newsletter">
+                <h3>📰 Stay Informed</h3>
+                <p>Subscribe to our newsletter for daily news updates</p>
+                <form id="newsletter-form" class="newsletter-form">
+                    <input type="email" id="newsletter-email" placeholder="Enter your email" required
+                        class="newsletter-input" />
+                    <button type="submit" class="newsletter-btn">Subscribe</button>
+                </form>
+                <p class="newsletter-status" id="newsletter-status"></p>
+            </div>
+
             <div class="footer-content">
                 <div class="footer-section">
                     <h3>DAILYNEWS</h3>
@@ -140,15 +174,64 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; <span id="copyright-year">2025</span> DAILYNEWS. All rights reserved.</p>
+                <p>&copy; <span id="copyright-year"></span> DAILYNEWS. v1.1.1. All rights reserved. | Last updated:
+                    <span id="last-updated"></span></p>
             </div>
         </div>
     </footer>
 
-    <script src="/script.js"></script>
+    <script src="/script.js?v=1.1.1"></script>
     <script>
-        // Auto-update copyright year
-        document.getElementById('copyright-year').textContent = new Date().getFullYear();
+        // Auto-update copyright year and current date
+        const now = new Date();
+        document.getElementById('copyright-year').textContent = now.getFullYear();
+
+        // Format current date
+        const options = { weekday: 'long', year: 'numeric', month: 'long', day: 'numeric' };
+        const currentDateEl = document.getElementById('current-date');
+        if (currentDateEl) {
+            currentDateEl.textContent = now.toLocaleDateString('en-US', options);
+        }
+
+        // Last updated timestamp
+        const lastUpdatedEl = document.getElementById('last-updated');
+        if (lastUpdatedEl) {
+            lastUpdatedEl.textContent = now.toLocaleTimeString('en-US', { hour: '2-digit', minute: '2-digit' });
+        }
+
+        // Newsletter form handler
+        const newsletterForm = document.getElementById('newsletter-form');
+        if (newsletterForm) {
+            newsletterForm.addEventListener('submit', async (e) => {
+                e.preventDefault();
+                const email = document.getElementById('newsletter-email').value;
+                const statusEl = document.getElementById('newsletter-status');
+
+                // Simple validation
+                if (!email || !email.includes('@')) {
+                    statusEl.textContent = '❌ Please enter a valid email';
+                    statusEl.style.color = '#ef4444';
+                    return;
+                }
+
+                // Show loading state
+                statusEl.textContent = '⏳ Subscribing...';
+                statusEl.style.color = '#3b82f6';
+
+                // Simulate API call (replace with actual backend later)
+                setTimeout(() => {
+                    statusEl.textContent = '✅ Successfully subscribed! Check your email.';
+                    statusEl.style.color = '#10b981';
+                    newsletterForm.reset();
+
+                    // Store in localStorage for now
+                    const subscribers = JSON.parse(localStorage.getItem('newsletter_subscribers') || '[]');
+                    subscribers.push({ email, date: new Date().toISOString() });
+                    localStorage.setItem('newsletter_subscribers', JSON.stringify(subscribers));
+                    console.log('📧 Newsletter subscriber added:', email);
+                }, 1000);
+            });
+        }
     </script>
     <script>
         // Search form handler
