--- a/public/app.html
+++ b/public/app.html
@@ -17,7 +17,7 @@
     <meta property="og:image" content="/images/dailynews-logo.svg">
     <meta name="twitter:image" content="/images/dailynews-logo.svg">
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' 'unsafe-inline' https://vercel.live https://www.youtube.com https://s.ytimg.com https://www.paypal.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: *; frame-src 'self' https://www.youtube.com https://www.paypal.com; connect-src 'self' https://newsdata.io https://api.nytimes.com https://v6.exchangerate-api.com https://api.rss2json.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com https://firestore.googleapis.com;">
+        content="default-src 'self'; script-src 'self' 'unsafe-inline' https://vercel.live https://www.youtube.com https://s.ytimg.com https://www.paypal.com https://www.gstatic.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: *; frame-src 'self' https://www.youtube.com https://www.paypal.com; connect-src 'self' https://newsdata.io https://api.nytimes.com https://v6.exchangerate-api.com https://api.rss2json.com https://firebase.googleapis.com https://identitytoolkit.googleapis.com https://firestore.googleapis.com;">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta http-equiv="X-Frame-Options" content="SAMEORIGIN">
     <meta name="referrer" content="strict-origin-when-cross-origin">
