UI Fix: Structural layout update for Trending Bar to ensure 100% perfect clipping.

--- a/public/app.html
+++ b/public/app.html
@@ -151,8 +151,10 @@
     <div class="trending-bar-top" id="trending-bar">
         <div class="container trending-inner">
             <span class="trending-label">TRENDING</span>
-            <div class="trending-ticker" id="trending-ticker">
-                <!-- Dynamic trending items -->
+            <div class="trending-ticker-container">
+                <div class="trending-ticker" id="trending-ticker">
+                    <!-- Dynamic trending items -->
+                </div>
             </div>
         </div>
     </div>
