--- a/public/app.html
+++ b/public/app.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="google-site-verification" content="AFMGedjZF5SYH7keB9CQ3xm0aVP4cU6mljkExb2r00c" />
-    <title>DAILYNEWS v1.5.9 - Breaking News & Latest Stories</title>
+    <title>DAILYNEWS v1.6.0 - Breaking News & Latest Stories</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -17,15 +17,20 @@
     <meta property="og:image" content="/images/dailynews-logo.svg">
     <meta name="twitter:image" content="/images/dailynews-logo.svg">
     <meta http-equiv="Content-Security-Policy"
-        content="default-src 'self'; script-src 'self' 'unsafe-inline' https://vercel.live https://www.youtube.com https://s.ytimg.com https://www.paypal.com https://www.gstatic.com https://*.gstatic.com https://*.googleapis.com https://apis.google.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://www.cdn4ads.com https://d3g5ovfngjw9bw.cloudfront.net https://3nbf4.com https://*.3nbf4.com https://adsco.re https://*.adsco.re https://auydbswopjvtre.com https://*.auydbswopjvtre.com https://*.topcreativeformat.com https://*.onclickperformance.com https://*.propellerads.com https://*.propush.me https://*.vidoomy.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: * https://googleads.g.doubleclick.net https://pagead2.googlesyndication.com; frame-src 'self' https://www.youtube.com https://www.paypal.com https://accounts.google.com https://*.firebaseapp.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://www.google.com; connect-src 'self' https://newsdata.io https://api.nytimes.com https://api.thenewsapi.com https://*.thenewsapi.com https://v6.exchangerate-api.com https://api.rss2json.com https://firebase.googleapis.com https://*.firebaseio.com https://identitytoolkit.googleapis.com https://firestore.googleapis.com https://www.paypal.com https://www.sandbox.paypal.com https://*.paypal.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com https://3nbf4.com https://*.3nbf4.com https://adsco.re https://*.adsco.re https://auydbswopjvtre.com https://*.auydbswopjvtre.com https://*.topcreativeformat.com https://*.onclickperformance.com https://*.propellerads.com https://*.propush.me https://*.vidoomy.com https://pagead2.googlesyndication.com;">
+        content="default-src 'self'; script-src 'self' 'unsafe-inline' https://vercel.live https://www.youtube.com https://s.ytimg.com https://www.paypal.com https://www.gstatic.com https://*.gstatic.com https://*.googleapis.com https://apis.google.com https://pagead2.googlesyndication.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://www.cdn4ads.com https://d3g5ovfngjw9bw.cloudfront.net https://3nbf4.com https://*.3nbf4.com https://adsco.re https://*.adsco.re https://auydbswopjvtre.com https://*.auydbswopjvtre.com https://*.topcreativeformat.com https://*.onclickperformance.com https://*.propellerads.com https://*.propush.me https://*.vidoomy.com https://quge5.com https://*.quge5.com https://al5sm.com https://*.al5sm.com https://nap5k.com https://*.nap5k.com https://gizokraijaw.net https://*.gizokraijaw.net https://otieu.com https://*.otieu.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; font-src 'self' https://fonts.gstatic.com; img-src 'self' data: blob: * https://googleads.g.doubleclick.net https://pagead2.googlesyndication.com; frame-src 'self' https://www.youtube.com https://www.paypal.com https://accounts.google.com https://*.firebaseapp.com https://googleads.g.doubleclick.net https://tpc.googlesyndication.com https://www.google.com; connect-src 'self' https://newsdata.io https://api.nytimes.com https://api.thenewsapi.com https://*.thenewsapi.com https://v6.exchangerate-api.com https://api.rss2json.com https://firebase.googleapis.com https://*.firebaseio.com https://identitytoolkit.googleapis.com https://firestore.googleapis.com https://www.paypal.com https://www.sandbox.paypal.com https://*.paypal.com https://apis.google.com https://accounts.google.com https://*.firebaseapp.com https://3nbf4.com https://*.3nbf4.com https://adsco.re https://*.adsco.re https://auydbswopjvtre.com https://*.auydbswopjvtre.com https://*.topcreativeformat.com https://*.onclickperformance.com https://*.propellerads.com https://*.propush.me https://*.vidoomy.com https://pagead2.googlesyndication.com https://quge5.com https://*.quge5.com https://al5sm.com https://*.al5sm.com https://nap5k.com https://*.nap5k.com https://gizokraijaw.net https://*.gizokraijaw.net https://otieu.com https://*.otieu.com;">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1281448884303417"
         crossorigin="anonymous"></script>
     <meta name="google-adsense-account" content="ca-pub-1281448884303417">
     <meta http-equiv="X-Content-Type-Options" content="nosniff">
     <meta name="referrer" content="strict-origin-when-cross-origin">
-    <!-- Monetag Ad Tag -->
-    <script src="https://3nbf4.com/act/files/tag.min.js?z=10460903" data-cfasync="false" async></script>
-    <link rel="stylesheet" href="/style.css?v=1.5.9">
+    <!-- Monetag Ad Tags -->
+    <script src="https://quge5.com/88/tag.min.js" data-zone="201879" async data-cfasync="false"></script>
+    <script>(function (s) { s.dataset.zone = '10461377', s.src = 'https://al5sm.com/tag.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <script>(function (s) { s.dataset.zone = '10461378', s.src = 'https://al5sm.com/tag.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <script src="https://3nbf4.com/act/files/tag.min.js?z=10461379" data-cfasync="false" async></script>
+    <script>(function (s) { s.dataset.zone = '10461381', s.src = 'https://nap5k.com/tag.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <script>(function (s) { s.dataset.zone = '10461382', s.src = 'https://gizokraijaw.net/vignette.min.js' })([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
+    <link rel="stylesheet" href="/style.css?v=1.6.0">
     <script defer src="https://vercel.live/api/script.js"></script>
     <script type="application/ld+json">
         {
@@ -41,8 +46,8 @@
         }
     </script>
     <script type="text/javascript" data-cfasync="false">
-        /*<![CDATA[/* */
-        (function () { var j = window, k = "f32e3c17e4383867b08d89c345c6a1a2", z = [["siteId", 901 + 168 - 197 + 5263119], ["minBid", 0], ["popundersPerIP", "0"], ["delayBetween", 0], ["default", false], ["defaultPerDay", 0], ["topmostLayer", "auto"]], g = ["d3d3LmNkbjRhZHMuY29tL2VzdGVsbGFyLXNkay5taW4uY3Nz", "ZDNnNW92Zm5nanc5YncuY2xvdWRmcm9udC5uZXQvZksvbHNwaW4ubWluLmpz"], e = -1, t, y, s = function () { clearTimeout(y); e++; if (g[e] && !(1794260386000 < (new Date).getTime() && 1 < e)) { t = j.document.createElement("script"); t.type = "text/javascript"; t.async = !0; var d = j.document.getElementsByTagName("script")[0]; t.src = "https://" + atob(g[e]); t.crossOrigin = "anonymous"; t.onerror = s; t.onload = function () { clearTimeout(y); j[k.slice(0, 16) + k.slice(0, 16)] || s() }; y = setTimeout(s, 5E3); d.parentNode.insertBefore(t, d) } }; if (!j[k]) { try { Object.freeze(j[k] = z) } catch (e) { } s() } })();
+            /*<![CDATA[/* */
+            (function () { var j = window, k = "f32e3c17e4383867b08d89c345c6a1a2", z = [["siteId", 901 + 168 - 197 + 5263119], ["minBid", 0], ["popundersPerIP", "0"], ["delayBetween", 0], ["default", false], ["defaultPerDay", 0], ["topmostLayer", "auto"]], g = ["d3d3LmNkbjRhZHMuY29tL2VzdGVsbGFyLXNkay5taW4uY3Nz", "ZDNnNW92Zm5nanc5YncuY2xvdWRmcm9udC5uZXQvZksvbHNwaW4ubWluLmpz"], e = -1, t, y, s = function () { clearTimeout(y); e++; if (g[e] && !(1794260386000 < (new Date).getTime() && 1 < e)) { t = j.document.createElement("script"); t.type = "text/javascript"; t.async = !0; var d = j.document.getElementsByTagName("script")[0]; t.src = "https://" + atob(g[e]); t.crossOrigin = "anonymous"; t.onerror = s; t.onload = function () { clearTimeout(y); j[k.slice(0, 16) + k.slice(0, 16)] || s() }; y = setTimeout(s, 5E3); d.parentNode.insertBefore(t, d) } }; if (!j[k]) { try { Object.freeze(j[k] = z) } catch (e) { } s() } })();
         /*]]>/* */
     </script>
     <script type="text/javascript" data-cfasync="false">
@@ -64,7 +69,7 @@
     <script>
         // Nuclear Cache Clear for v1.1.0
         (function () {
-            const CURRENT_VERSION = 'v1.5.9';
+            const CURRENT_VERSION = 'v1.6.0';
             const savedVersion = localStorage.getItem('app_version');
             if (savedVersion !== CURRENT_VERSION) {
                 console.warn('🔄 New version ' + CURRENT_VERSION + ' detected. Clearing caches and Service Workers...');
@@ -241,7 +246,7 @@
 
             <div class="footer-bottom">
                 <div class="footer-legal">
-                    <p>&copy; <span id="copyright-year"></span> DAILYNEWS. v1.5.9. All rights reserved. Precise
+                    <p>&copy; <span id="copyright-year"></span> DAILYNEWS. v1.6.0. All rights reserved. Precise
                         reporting, globally recognized.</p>
                 </div>
                 <div class="footer-status">
@@ -251,7 +256,7 @@
         </div>
     </footer>
 
-    <script src="/script.js?v=1.5.9"></script>
+    <script src="/script.js?v=1.6.0"></script>
     <script>
         // Auto-update copyright year and current date
         const now = new Date();
